--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li>
+				<a href="https://www.youtube.com/watch?v=KUpwupYj_tY&list=RDKUpwupYj_tY&start_radio=1">Song 1</a>
+			</li>
+			<li>
+				<a href="https://www.youtube.com/watch?v=UbMgcdmYC70&list=RDKUpwupYj_tY&index=7">Song 2</a>
+			</li>
+			<li>
+				<a href="https://www.youtube.com/watch?v=ElZfdU54Cp8&list=RDKUpwupYj_tY&index=23">Song 3</a>
+			</li>
+		</ul>
+	</nav>
+	<h1>3 random audios</h1>
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+	<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
